# inkwell

./: .env.example  .gitignore  DOCUMENTATION.md  README.md  pyproject.toml  run.py
app/: __init__.py  config.py  main.py  models.py  prompts.py  routes.py
app/services/: __init__.py  email.py
templates/: index.html
templates/partials/: error.html  result.html
